syntax = "proto3";

service Timeline {
  rpc Connect (Setting) returns (stream Comment) {};
}

message Setting {
  string hash_tag = 1;
  string channel_name = 2;
}

message Comment {
  string name = 1;
  string message = 2;
  PlatformType platform_type = 3;
}

enum PlatformType {
  TWITTER = 0;
  TWITCH = 1;
}